--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ stages:
       - ctrl/text.dat
       - xtrn/**/{GNUm,M}akefile
       - xtrn/**/*.{c,h,cpp,hpp,mk}
+      - exec/tests/**/*
 
 include:
   - local: '.gitlab-ci-unix.yml'
