--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -691,7 +691,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build.tgz"
-    - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsexec exec/tests/test.js"
+    - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsexec -f exec/tests/test.js"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [sbbs-build]"
       artifacts: false
