Fix previous commit.
Was overriding value, not appending.

--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -131,7 +131,7 @@ ifneq ($(os),darwin)
  else
   LIB_RPATH += -Wl,-rpath,$(PWD)/$(LIBODIR)
  endif
- LIB_RPATH := '-Wl,-rpath,$$ORIGIN,-rpath,$$ORIGIN/../$(LIBODIR),-z,origin,--enable-new-dtags'
+ LIB_RPATH += '-Wl,-rpath,$$ORIGIN,-rpath,$$ORIGIN/../$(LIBODIR),-z,origin,--enable-new-dtags'
 endif
 
 CON_LIBS	+= -lsbbs -lftpsrvr -lwebsrvr -lmailsrvr -lservices
