Actually, I have no plans for new features soon... call this 1.5b

--- a/src/syncterm/dpkg-control.in
+++ b/src/syncterm/dpkg-control.in
@@ -1,5 +1,5 @@
 Package: syncterm
-Version: 1.5a
+Version: 1.5b
 Maintainer: Deuce <shurd@sasktel.net>
 Architecture: %%ARCH%%
 Description: ANSI Terminal for BBSs
