More rpath hackery...
If SBBSDIR is set, add $(SBBSDIR)/exec to rpath.
Always add the original output directory to rpath.

I'm not sure what the old LD_RUN_PATH stuff was trying to do, but
I think these are the bits that make it work.

--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -127,10 +127,9 @@ MT_CFLAGS	+=	$(SBBSDEFS) $(SFTP-MT_CFLAGS)
 
 ifneq ($(os),darwin)
  ifdef SBBSDIR
-  LIB_RPATH += -Wl,-rpath,$(LIBODIR)
- else
-  LIB_RPATH += -Wl,-rpath,$(PWD)/$(LIBODIR)
+  LIB_RPATH += -Wl,-rpath,$(SBBSDIR)/exec
  endif
+ LIB_RPATH += -Wl,-rpath,$(PWD)/$(LIBODIR)
  LIB_RPATH += '-Wl,-rpath,$$ORIGIN,-rpath,$$ORIGIN/../$(LIBODIR),-z,origin,--enable-new-dtags'
 endif
 
