Add delfiles (filebase maintenance) as a default timed event
This is how the max files/age of files in directories is enforced.

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -298,6 +298,17 @@
 	mdays=0
 	months=0
 	errlevel=3
+[event:DELFILES]
+	cmd=?delfiles
+	days=255
+	time=0
+	node_num=0
+	settings=0
+	startup_dir=
+	freq=0
+	mdays=0
+	months=0
+	errlevel=3
 [event:GETIMLST]
 	cmd=*getimlst
 	days=255
