Add a test that runs valgrind on jsexec
We need some JS_GC() suppressions though.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ include:
       platform: 'amd64'
       tagname: 'FreeBSD'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      has_valgrind: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'raspian'
@@ -49,6 +50,7 @@ include:
       tagname: "Linux"
       has_gtk: "yes"
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      has_valgrind: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: "alpine-linux"
