--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -19,6 +19,8 @@ spec:
       default: 'no'
     gnu_make:
       default: 'gmake'
+    has_valgrind:
+      default: 'no'
 ---
 
 ".$[[ inputs.os ]]":
@@ -699,6 +701,24 @@ spec:
     - if: '"$[[ inputs.cross_platform ]]" == "yes"'
       when: never
     - if: '"$[[ inputs.no_javascript ]]" == "yes"'
+      when: never
+    - !reference [.rules, rules]
+
+"$[[ inputs.os ]]-$[[ inputs.platform ]] jsexec-testsuite-valgrind":
+  extends:
+    - .$[[ inputs.os ]]-test
+  script:
+    - tar -xzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build.tgz"
+    - "SBBSCTRL=./ctrl valgrind -v --num-callers=20 --track-origins=yes --read-var-info=yes --read-inline-info=yes --suppressions=src/sbbs3/suppressions.vg src/sbbs3/*.exe.release/jsexec -f exec/tests/test.js"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [sbbs-build]"
+      artifacts: false
+  rules:
+    - if: '"$[[ inputs.cross_platform ]]" == "yes"'
+      when: never
+    - if: '"$[[ inputs.no_javascript ]]" == "yes"'
+      when: never
+    - if: '"$[[ inputs.has_valgrind ]]" == "no"'
       when: never
     - !reference [.rules, rules]
 
