--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -693,6 +693,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build.tgz"
+    - sync
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsexec -f exec/tests/test.js"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [sbbs-build]"
@@ -709,6 +710,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/sbbs-build.tgz"
+    - sync
     - "SBBSCTRL=./ctrl valgrind --leak-check=full --error-exitcode=1 --num-callers=20 --track-origins=yes --read-var-info=yes --read-inline-info=yes --suppressions=src/sbbs3/suppressions.vg src/sbbs3/*.exe.release/jsexec -f exec/tests/test.js"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [sbbs-build]"
@@ -727,6 +729,7 @@ spec:
     - .$[[ inputs.os ]]-test
   script:
     - tar -xzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/jsdoor.tgz"
+    - sync
     - "SBBSCTRL=./ctrl src/sbbs3/*.exe.release/jsdoor -f exec/tests/test.js"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [jsdoor]"
