--- a/src/sbbs3/sbbscon.vcxproj
+++ b/src/sbbs3/sbbscon.vcxproj
@@ -40,6 +40,7 @@
     <Import Project="..\hash\hash.props" />
     <Import Project="..\..\3rdp\win32.release\mosquitto\mosquitto.props" />
     <Import Project="..\sftp\sftp.props" />
+    <Import Project="..\..\3rdp\win32.release\libarchive\libarchive.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -52,6 +53,7 @@
     <Import Project="..\hash\hash.props" />
     <Import Project="..\..\3rdp\win32.release\mosquitto\mosquitto.props" />
     <Import Project="..\sftp\sftp.props" />
+    <Import Project="..\..\3rdp\win32.release\libarchive\libarchive.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
