Read and rewrote with SCFG (no functional changes)
Just adds new keys/default values

--- a/ctrl/file.ini
+++ b/ctrl/file.ini
@@ -8,64 +8,79 @@ leech_pct=0
 leech_sec=60
 settings=4
 filename_maxlen=64
+supported_archive_formats=zip, z7, tgz
 [viewer:0]
 	extension=TXT
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:1]
 	extension=DIZ
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:2]
 	extension=DOC
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:3]
 	extension=ANS
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:4]
 	extension=ASC
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:5]
 	extension=RIP
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:6]
 	extension=NFO
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:7]
 	extension=FAQ
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:8]
 	extension=ICE
 	cmd=*type %s
 	ars=
+	ex_mode=0xb
 [viewer:9]
 	extension=HTM
 	cmd=?typehtml -color %s
 	ars=
+	ex_mode=0xb
 [viewer:10]
 	extension=SEQ
 	cmd=?printfile %f P_WRAP 40
 	ars=
+	ex_mode=0xb
 [viewer:11]
 	extension=*
 	cmd=?archive list %f
 	ars=
+	ex_mode=0xb
 [tester:0]
 	extension=ZIP
 	cmd=%@unzip -tqq %f
 	working=Testing ZIP Integrity...
 	ars=
+	ex_mode=0
 [tester:1]
 	extension=ZIP
 	cmd=%@zip -z %f < %zzipmsg.txt
 	working=Adding ZIP Comment...
 	ars=
+	ex_mode=0
 [protocol:0]
 	key=X
 	name=XMODEM-Original
@@ -153,6 +168,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=bbs/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -173,6 +190,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=internet/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -193,6 +212,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=text/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=ZIP,TXT
@@ -213,6 +234,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=comm/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -233,6 +256,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=util/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -253,6 +278,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=games/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -273,6 +300,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=prog/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -293,6 +322,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=graphics/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -313,6 +344,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=business/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -333,6 +366,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=misc/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -353,6 +388,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=uploads/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -373,6 +410,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=sysop/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
@@ -393,6 +432,8 @@ filename_maxlen=64
 	exempt_ars=
 	area_tag=
 	path=user/
+	vdir=
+	vshortcut=
 	data_dir=
 	upload_sem=
 	extensions=
