--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,6 +139,7 @@ smoketest-jsexec-win32:
   extends: .rules
   script:
     - cd src/sbbs3/msvc.win32.dll.release
+    - $env:PATH = $env:CI_PROJECT_DIR + "\3rdp\win32.release\cryptlib\bin;" + $env:PATH
     - ..\msvc.win32.exe.release\jsexec -c../../../ctrl -C exit(0)"
   dependencies: ["windows-x86 [sbbs]"]
 
@@ -149,7 +150,6 @@ smoketest-jsexec-win32:
   script:
     - cd src/sbbs3/msvc.win32.dll.release
     - $env:PATH = $env:CI_PROJECT_DIR + "\3rdp\win32.release\cryptlib\bin;" + $env:PATH
-    - echo $env:PATH
     - ..\msvc.win32.exe.release\jsexec -c../../../ctrl -C ../../../exec/tests/test.js
   dependencies: ["windows-x86 [sbbs]"]
 
